Replace bootstrap by uikit, more lightweight for the few buttons needed.

--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <title>glitch_r</title>
   </head>
   <body>
-    <div class="js-container">
-      <div class="file-selector"></div>
-      <div class="glitch-controls"></div>
-      <div class="image-preview"></div>
-      <div class="image-stack"></div>
+    <div class="uk-grid js-container">
+      <div class="uk-width-large-2-4 uk-width-medium-2-3 uk-width-small-1-1 uk-container-center">
+        <h1>Welcome to the glitch_r</h1>
+        <form class="file-selector uk-form uk-margin"></form>
+        <form class="glitch-controls uk-form uk-margin"></form>
+        <div class="image-preview"></div>
+        <div class="image-stack"></div>
+      </div>
     </div>
     <script src="dist/js/app.js"></script>
     <hr></hr>
@@ -20,5 +23,6 @@
       <br />
       <a href="http://binarymuse.github.io/react-primer/build/index.html?6">Compare with React</a>
     </p>
- -->  </body>
+ -->
+  </body>
 </html>
